@@ -48,8 +48,8 @@ class tx_seminars_Mapper_Event extends tx_oelib_DataMapper {
 		'tutors' => 'tx_seminars_Mapper_Speaker',
 		'leaders' => 'tx_seminars_Mapper_Speaker',
 		'payment_methods' => Tx_Seminars_Mapper_PaymentMethod::class,
-		'organizers' => 'tx_seminars_Mapper_Organizer',
-		'organizing_partners' => 'tx_seminars_Mapper_Organizer',
+		'organizers' => Tx_Seminars_Mapper_Organizer::class,
+		'organizing_partners' => Tx_Seminars_Mapper_Organizer::class,
 		'target_groups' => 'tx_seminars_Mapper_TargetGroup',
 		'owner_feuser' => Tx_Oelib_Mapper_FrontEndUser::class,
 		'vips' => Tx_Oelib_Mapper_FrontEndUser::class,
