@@ -511,7 +511,7 @@ class tx_seminars_Mapper_EventTest extends Tx_Phpunit_TestCase {
 		$uid = $this->testingFramework->createRecord(
 			'tx_seminars_seminars', array('organizers' => 1)
 		);
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->testingFramework->createRelation(
 			'tx_seminars_seminars_organizers_mm', $uid, $organizer->getUid()
@@ -531,7 +531,7 @@ class tx_seminars_Mapper_EventTest extends Tx_Phpunit_TestCase {
 		$uid = $this->testingFramework->createRecord(
 			'tx_seminars_seminars', array('organizers' => 1)
 		);
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->testingFramework->createRelation(
 			'tx_seminars_seminars_organizers_mm', $uid, $organizer->getUid()
@@ -565,7 +565,7 @@ class tx_seminars_Mapper_EventTest extends Tx_Phpunit_TestCase {
 	 */
 	public function getOrganizingPartnersWithOneOrganizingReturnsListOfOrganizers() {
 		$uid = $this->testingFramework->createRecord('tx_seminars_seminars');
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->testingFramework->createRelationAndUpdateCounter(
 			'tx_seminars_seminars', $uid, $organizer->getUid(), 'organizing_partners'
@@ -583,7 +583,7 @@ class tx_seminars_Mapper_EventTest extends Tx_Phpunit_TestCase {
 	 */
 	public function getOrganizingPartnersWithOneOrganizingPartnersReturnsOneOrganizingPartner() {
 		$uid = $this->testingFramework->createRecord('tx_seminars_seminars');
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->testingFramework->createRelationAndUpdateCounter(
 			'tx_seminars_seminars', $uid, $organizer->getUid(), 'organizing_partners'
