@@ -317,7 +317,7 @@ class tx_seminars_Model_FrontEndUserGroupTest extends Tx_Phpunit_TestCase {
 	 * @test
 	 */
 	public function getDefaultOrganizerForSetOrganizerReturnsIt() {
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->fixture->setData(array('tx_seminars_default_organizer' => $organizer));
 
@@ -331,7 +331,7 @@ class tx_seminars_Model_FrontEndUserGroupTest extends Tx_Phpunit_TestCase {
 	 * @test
 	 */
 	public function hasDefaultOrganizerForSetOrganizerReturnsTrue() {
-		$organizer = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Organizer')
+		$organizer = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Organizer::class)
 			->getNewGhost();
 		$this->fixture->setData(array('tx_seminars_default_organizer' => $organizer));
 
