@@ -845,7 +845,7 @@ class tx_seminars_Model_FrontEndUserTest extends Tx_Phpunit_TestCase {
 	 */
 	public function getDefaultOrganizerForGroupWithDefaultOrganizerReturnsThatOrganizer() {
 		$organizer = tx_oelib_MapperRegistry
-			::get('tx_seminars_Mapper_Organizer')->getNewGhost();
+			::get(Tx_Seminars_Mapper_Organizer::class)->getNewGhost();
 		$userGroup = tx_oelib_MapperRegistry
 			::get('tx_seminars_Mapper_FrontEndUserGroup')->getNewGhost();
 		$userGroup->setData(array('tx_seminars_default_organizer' => $organizer));
@@ -864,13 +864,13 @@ class tx_seminars_Model_FrontEndUserTest extends Tx_Phpunit_TestCase {
 	 */
 	public function getDefaultOrganizersForTwoGroupsWithDefaultOrganizersReturnsBothOrganizers() {
 		$organizer1 = tx_oelib_MapperRegistry
-			::get('tx_seminars_Mapper_Organizer')->getNewGhost();
+			::get(Tx_Seminars_Mapper_Organizer::class)->getNewGhost();
 		$userGroup1 = tx_oelib_MapperRegistry
 			::get('tx_seminars_Mapper_FrontEndUserGroup')->getNewGhost();
 		$userGroup1->setData(array('tx_seminars_default_organizer' => $organizer1));
 
 		$organizer2 = tx_oelib_MapperRegistry
-			::get('tx_seminars_Mapper_Organizer')->getNewGhost();
+			::get(Tx_Seminars_Mapper_Organizer::class)->getNewGhost();
 		$userGroup2 = tx_oelib_MapperRegistry
 			::get('tx_seminars_Mapper_FrontEndUserGroup')->getNewGhost();
 		$userGroup2->setData(array('tx_seminars_default_organizer' => $organizer2));
@@ -917,7 +917,7 @@ class tx_seminars_Model_FrontEndUserTest extends Tx_Phpunit_TestCase {
 	 */
 	public function hasDefaultOrganizersForNonEmptyDefaultOrganizersReturnsTrue() {
 		$organizer = tx_oelib_MapperRegistry
-			::get('tx_seminars_Mapper_Organizer')->getNewGhost();
+			::get(Tx_Seminars_Mapper_Organizer::class)->getNewGhost();
 		$organizers = new Tx_Oelib_List();
 		$organizers->add($organizer);
 
